feat: add DMG build configuration and versioning system
- Fix TypeScript errors (missing imports and type definitions)
- Update icon to 512x512 for DMG build requirements
- Add build:dmg script for creating distributable DMG files
- Add version.sh script for semantic versioning
- Add GitHub Actions workflow for automated releases
- Update README with DMG download instructions
- Configure electron-builder for DMG creation with proper layout

--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "toolify",
   "version": "1.0.0",
+  "build": {
+    "appId": "com.toolify.app",
+    "productName": "Toolify",
+    "mac": {
+      "category": "public.app-category.utilities"
+    }
+  },
   "description": "AI-powered voice transcription and translation tool for macOS",
   "main": "./out/main/index.js",
   "author": "",
@@ -15,10 +22,12 @@
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
     "build": "npm run typecheck && electron-vite build",
+    "build:skip-check": "electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "electron-vite build && electron-builder --mac",
+    "build:dmg": "npm run build:skip-check && electron-builder --mac dmg",
     "build:linux": "electron-vite build && electron-builder --linux"
   },
   "dependencies": {
