--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -29,6 +29,15 @@ mac:
   notarize: false
 dmg:
   artifactName: ${name}-${version}.${ext}
+  title: ${productName} ${version}
+  contents:
+    - x: 410
+      y: 150
+      type: link
+      path: /Applications
+    - x: 130
+      y: 150
+      type: file
 linux:
   target:
     - AppImage
