--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -48,6 +48,4 @@ linux:
 appImage:
   artifactName: ${name}-${version}.${ext}
 npmRebuild: false
-publish:
-  provider: generic
-  url: https://example.com/auto-updates
+publish: null
