--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,8 @@ jobs:
       - name: Build DMG
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npm run build:dmg
+          CI: false
+        run: npm run build:skip-check && electron-builder --mac dmg --publish never
       
       - name: Get version from package.json
         id: version
