fix: skip code signing to speed up DMG build
- Add --config.mac.identity=null to skip signing
- Disable gatekeeperAssess and hardenedRuntime
- Signing was causing build to hang, now builds faster

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -27,6 +27,8 @@ mac:
     - NSDocumentsFolderUsageDescription: Application requests access to the user's Documents folder.
     - NSDownloadsFolderUsageDescription: Application requests access to the user's Downloads folder.
   notarize: false
+  gatekeeperAssess: false
+  hardenedRuntime: false
 dmg:
   artifactName: ${name}-${version}.${ext}
   title: ${productName} ${version}
