--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "electron-vite build && electron-builder --mac",
-    "build:dmg": "npm run build:skip-check && electron-builder --mac dmg",
+    "build:dmg": "npm run build:skip-check && electron-builder --mac dmg --publish never --config.mac.identity=null",
     "build:linux": "electron-vite build && electron-builder --linux"
   },
   "dependencies": {
