feat: add auto-update system with GitHub releases (v0.0.3)
- Add electron-updater for automatic updates
- Create auto-updater module with GitHub releases integration
- Add update notification banners in Settings
  - Blue banner for available updates with download button
  - Green banner for downloaded updates with install button
- Add IPC handlers for update operations
  - checkForUpdates: Check for new versions
  - downloadUpdate: Download update in background
  - quitAndInstall: Install and restart app
  - getUpdateStatus: Get current update state
- Add real-time update progress tracking
- Configure electron-builder for GitHub releases
  - Add publish configuration
  - Enable DMG and ZIP targets for macOS
- Auto-check for updates 5 seconds after app start
- Update version to 0.0.3

Features:
- Automatic update detection from GitHub releases
- Download progress indicator with percentage
- One-click install and restart
- Beautiful UI notifications
- Non-intrusive update flow

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -3,6 +3,10 @@ productName: Toolify
 directories:
   buildResources: build
 icon: resources/icon.png
+publish:
+  provider: github
+  owner: mehmetsagir
+  repo: toolify
 files:
   - '!**/.vscode/*'
   - '!src/*'
@@ -29,6 +33,9 @@ mac:
   notarize: false
   gatekeeperAssess: false
   hardenedRuntime: false
+  target:
+    - dmg
+    - zip
 dmg:
   artifactName: ${name}-${version}.${ext}
   title: ${productName} ${version}
@@ -50,4 +57,3 @@ linux:
 appImage:
   artifactName: ${name}-${version}.${ext}
 npmRebuild: false
-publish: null
