--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
-    "build:mac": "electron-vite build && electron-builder --mac",
+    "build:mac": "electron-vite build && electron-builder --mac --publish always --config.mac.identity=null",
     "build:dmg": "npm run build:skip-check && npx electron-builder --mac dmg --publish never --config.mac.identity=null",
     "build:linux": "electron-vite build && electron-builder --linux"
   },
