--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -33,11 +33,18 @@ mac:
   notarize: false
   gatekeeperAssess: false
   hardenedRuntime: false
+  artifactName: ${name}-${version}-${arch}.${ext}
   target:
-    - dmg
-    - zip
+    - target: dmg
+      arch:
+        - arm64
+        - x64
+    - target: zip
+      arch:
+        - arm64
+        - x64
 dmg:
-  artifactName: ${name}-${version}.${ext}
+  artifactName: ${name}-${version}-${arch}.${ext}
   title: ${productName} ${version}
   contents:
     - x: 410
