--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "electron-updater": "^6.6.2",
     "lucide-react": "^0.554.0",
     "openai": "^6.9.1",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "whisper-node": "^1.1.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
