chore(build): update build configuration and scripts
- Add build:mac:publish script for GitHub Actions (with publish)
- Update build:mac to use --publish never for local builds
- Add icon path to electron-builder.yml for macOS builds
- Update eslint.config.mjs to ignore build/ directory
- Update GitHub Actions workflow to use build:mac:publish
- Update copy-whisper-executables script

These changes improve the build process and prevent GitHub token errors during local builds.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CI: false
-        run: npm run build:mac
+        run: npm run build:mac:publish
 
       - name: Get version from package.json
         id: version
