--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "prebuild:dmg": "node scripts/copy-whisper-executables.js",
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
-    "build:mac": "electron-vite build && electron-builder --mac --publish always --config.mac.identity=null",
+    "build:mac": "electron-vite build && electron-builder --mac --publish never --config.mac.identity=null",
+    "build:mac:publish": "electron-vite build && electron-builder --mac --publish always --config.mac.identity=null",
     "build:dmg": "npm run build:skip-check && npx electron-builder --mac dmg --publish never --config.mac.identity=null",
     "build:linux": "electron-vite build && electron-builder --linux"
   },
