fix: add icon path to build config
Add icon.png path to electron-builder config to fix the app icon
in Dock and Application Switcher.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "build": {
     "appId": "com.toolify.app",
     "productName": "Toolify",
+    "icon": "resources/icon.png",
     "mac": {
       "category": "public.app-category.utilities"
     }
