test: add Vitest testing infrastructure with pre-commit hooks
- Add Vitest with jsdom environment and React Testing Library
- Configure test setup and path aliases
- Add Husky pre-commit hooks with lint-staged
- Add test scripts (test, test:ui, test:run)
- Create example test setup for renderer components

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint --cache .",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
     "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
@@ -36,7 +39,8 @@
     "build:mac": "electron-vite build && electron-builder --mac --publish never --config.mac.identity=null",
     "build:mac:publish": "electron-vite build && electron-builder --mac --publish always --config.mac.identity=null",
     "build:dmg": "npm run build:skip-check && npx electron-builder --mac dmg --publish never --config.mac.identity=null",
-    "build:linux": "electron-vite build && electron-builder --linux"
+    "build:linux": "electron-vite build && electron-builder --linux",
+    "prepare": "husky"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
@@ -54,10 +58,13 @@
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.1.0",
     "@electron-toolkit/tsconfig": "^2.0.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@types/node": "^22.18.6",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.3",
+    "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/ui": "^4.0.16",
     "autoprefixer": "^10.4.22",
     "electron": "^38.1.2",
     "electron-builder": "^25.1.8",
@@ -66,13 +73,18 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "husky": "^9.1.7",
+    "jsdom": "^27.4.0",
+    "lint-staged": "^16.2.7",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.2",
+    "vfile": "^6.0.3",
     "vite": "^7.1.6",
+    "vitest": "^4.0.16",
     "whisper-node": "^1.1.1"
   }
 }
