--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -81,6 +81,8 @@ mac:
     - NSMicrophoneUsageDescription: Application requests access to the device's microphone.
     - NSDocumentsFolderUsageDescription: Application requests access to the user's Documents folder.
     - NSDownloadsFolderUsageDescription: Application requests access to the user's Downloads folder.
+    - CFBundleDisplayName: Toolify
+    - CFBundleName: Toolify
   notarize: false
   gatekeeperAssess: false
   hardenedRuntime: false
