feat(apple-stt): add support for Apple Speech to Text
This commit introduces support for Apple Speech to Text, updates the build configuration, and modifies the application settings to accommodate the new transcription provider.

--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "build": "npm run typecheck && electron-vite build",
     "build:skip-check": "electron-vite build",
     "postinstall": "electron-builder install-app-deps",
-    "prebuild:mac": "node scripts/copy-whisper-executables.js",
-    "prebuild:dmg": "node scripts/copy-whisper-executables.js",
+    "prebuild:mac": "node scripts/copy-whisper-executables.js && node scripts/build-apple-stt.js",
+    "prebuild:dmg": "node scripts/copy-whisper-executables.js && node scripts/build-apple-stt.js",
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "electron-vite build && electron-builder --mac --publish never --config.mac.identity=null",
