--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -38,6 +38,8 @@ files:
   - 'build/whisper-node-dist/**/*'
   # Include whisper.cpp executables from build directory (copied by prebuild script)
   - 'build/whisper-executables/**/*'
+  # Include Apple STT binary from build directory (built by prebuild script)
+  - 'build/apple-stt/**/*'
   # Global exclusions for ALL model files (safety net)
   - '!**/*.bin'
   - '!**/*.ggml'
@@ -66,6 +68,7 @@ asarUnpack:
   # Unpack whisper-node dist files and executables from build directory (no models included)
   - 'build/whisper-node-dist/**/*'
   - 'build/whisper-executables/**/*'
+  - 'build/apple-stt/**/*'
 win:
   executableName: toolify
 nsis:
@@ -81,6 +84,7 @@ mac:
     - NSMicrophoneUsageDescription: Application requests access to the device's microphone.
     - NSDocumentsFolderUsageDescription: Application requests access to the user's Documents folder.
     - NSDownloadsFolderUsageDescription: Application requests access to the user's Downloads folder.
+    - NSSpeechRecognitionUsageDescription: Toolify uses speech recognition to transcribe your voice recordings.
     - CFBundleDisplayName: Toolify
     - CFBundleName: Toolify
   notarize: false
