--- a/scripts/apple-stt/.build/plugin-tools.yaml
+++ b/scripts/apple-stt/.build/plugin-tools.yaml
@@ -127,6 +127,8 @@ commands:
         'Speech',
         '-framework',
         'Foundation',
+        '-framework',
+        'AVFoundation',
         '-plugin-path',
         '/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/host/plugins/testing',
         '-sdk',
