--- a/package.json
+++ b/package.json
@@ -46,19 +46,16 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
-    "@tailwindcss/postcss": "^4.1.17",
-    "clsx": "^2.1.1",
     "electron-store": "^8.1.0",
     "electron-updater": "^6.6.2",
-    "lucide-react": "^0.554.0",
     "openai": "^6.9.1",
-    "tailwind-merge": "^3.4.0",
     "uiohook-napi": "^1.5.4"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.1.0",
     "@electron-toolkit/tsconfig": "^2.0.0",
+    "@tailwindcss/postcss": "^4.1.17",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@types/node": "^22.18.6",
@@ -67,6 +64,7 @@
     "@vitejs/plugin-react": "^5.1.2",
     "@vitest/ui": "^4.0.16",
     "autoprefixer": "^10.4.22",
+    "clsx": "^2.1.1",
     "electron": "^38.1.2",
     "electron-builder": "^25.1.8",
     "electron-vite": "^4.0.1",
@@ -77,11 +75,14 @@
     "husky": "^9.1.7",
     "jsdom": "^27.4.0",
     "lint-staged": "^16.2.7",
+    "lucide-react": "^0.554.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
+    "terser": "^5.46.0",
     "typescript": "^5.9.2",
     "vfile": "^6.0.3",
     "vite": "^7.1.6",
