--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,6 @@ on:
   push:
     tags:
       - 'v*'
-  workflow_dispatch:
 
 permissions:
   contents: write
@@ -17,6 +16,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Verify tag matches package.json version
+        run: |
+          TAG_VERSION="${GITHUB_REF_NAME#v}"
+          PKG_VERSION=$(node -p "require('./package.json').version")
+          if [ "$TAG_VERSION" != "$PKG_VERSION" ]; then
+            echo "::error::Tag version ($TAG_VERSION) does not match package.json version ($PKG_VERSION)"
+            exit 1
+          fi
+          echo "Version verified: $PKG_VERSION"
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -26,15 +35,20 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build App
+      - name: Build and Publish
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CSC_LINK: ${{ secrets.CSC_LINK }}
+          CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD }}
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
           CI: false
         run: npm run build:mac:publish
 
       - name: Get version from package.json
         id: version
-        run: echo "VERSION=$(node -p \"require('./package.json').version\")" >> $GITHUB_OUTPUT
+        run: echo "VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
@@ -58,15 +72,6 @@ jobs:
 
             **For Auto-Update (ZIP):**
             The ZIP file is used for automatic updates. If you already have Toolify installed, the app will notify you and download this update automatically.
-
-            ### What's New
-            - Auto-update system with GitHub releases integration
-            - In-app update notifications
-            - Download progress tracking
-            - One-click install and restart
-
-            ### macOS Gatekeeper
-            If you see a warning on first launch, right-click the app and select "Open".
           draft: false
           prerelease: false
         env:
