--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,29 +2,47 @@ name: Build and Release
 
 on:
   push:
-    tags:
-      - 'v*'
+    branches:
+      - master
+    paths:
+      - 'package.json'
 
 permissions:
   contents: write
 
 jobs:
+  check-version:
+    runs-on: ubuntu-latest
+    outputs:
+      should_release: ${{ steps.check.outputs.should_release }}
+      version: ${{ steps.check.outputs.version }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Check if version changed
+        id: check
+        run: |
+          PKG_VERSION=$(node -p "require('./package.json').version")
+          if git rev-parse "v$PKG_VERSION" >/dev/null 2>&1; then
+            echo "Tag v$PKG_VERSION already exists, skipping release"
+            echo "should_release=false" >> $GITHUB_OUTPUT
+          else
+            echo "New version detected: $PKG_VERSION"
+            echo "should_release=true" >> $GITHUB_OUTPUT
+            echo "version=$PKG_VERSION" >> $GITHUB_OUTPUT
+          fi
+
   build:
+    needs: check-version
+    if: needs.check-version.outputs.should_release == 'true'
     runs-on: macos-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Verify tag matches package.json version
-        run: |
-          TAG_VERSION="${GITHUB_REF_NAME#v}"
-          PKG_VERSION=$(node -p "require('./package.json').version")
-          if [ "$TAG_VERSION" != "$PKG_VERSION" ]; then
-            echo "::error::Tag version ($TAG_VERSION) does not match package.json version ($PKG_VERSION)"
-            exit 1
-          fi
-          echo "Version verified: $PKG_VERSION"
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -46,21 +64,22 @@ jobs:
           CI: false
         run: npm run build:mac:publish
 
-      - name: Get version from package.json
-        id: version
-        run: echo "VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
+      - name: Create tag
+        run: |
+          git tag "v${{ needs.check-version.outputs.version }}"
+          git push origin "v${{ needs.check-version.outputs.version }}"
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.ref_name }}
+          tag_name: v${{ needs.check-version.outputs.version }}
           files: |
             dist/*.dmg
             dist/*.zip
             dist/latest-mac.yml
-          name: Release ${{ github.ref_name }}
+          name: Release v${{ needs.check-version.outputs.version }}
           body: |
-            ## Toolify ${{ github.ref_name }}
+            ## Toolify v${{ needs.check-version.outputs.version }}
 
             ### Installation
 
